@@ -1,7 +1,9 @@
 1.17
  * ID3: 
    * Support for the iTunes non-standard TSO2 and TSOC frames.
+   * Attempt to recover from faulty extended header flags. (#4)
    * Fix a bug in ID3v2.4 footer flag detection, (#5)
+   * Attempt to recover from bad SYLT frames. (#6)
  * MP4: Don't fail or double-encode UTF-8 strings when given a str.
  * EasyID3: Extension API for defining new "easy" tags at runtime.
  * EasyMP4: Like EasyID3, but for iTunes MPEG-4 files.
